# CMake

./: CMakeLists.txt  main.cpp
Adder/: adder.cpp
